--- a/index.html
+++ b/index.html
@@ -1,32 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhavesh Chainani - Projects</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bhavesh Chainani | Data Scientist | MS Computer Science</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="mediaqueries.css">
+        <link rel="icon" href="./assets/bhav-logo.png" type="image/x-icon">
+        <script type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+        </script>
+        <script type="text/javascript">
+        (function(){
+            emailjs.init("W8KK0-Rh9tWIw9Fik");
+        })();
+        </script>
+    </head>    
 <body>
     <header>
-        <h1>Bhavesh Chainani</h1>
-        <nav>
-            <ul>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#resume">Resume</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+        <nav id="nav">
+            <div class="header">
+                <div class="logo">
+                    <img src="./assets/bhav-logo.png" alt="Bhavesh Chainani">
+                </div>
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#proficiencies">Proficiencies</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#other-platforms">Other Platforms</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+        <nav id="hamburger-nav">
+            <div class="header">
+                <div class="logo">
+                    <img src="./assets/bhav-logo.png" alt="Bhavesh Chainani">
+                </div>
+                <div class="hamburger-menu">
+                    <div class="hamburger-icon" onclick="toggleMenu()">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="menu-links">
+                        <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                        <li><a href="#proficiencies" onclick="toggleMenu()">Proficiencies</a></li>
+                        <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+                        <li><a href="#other-platforms" onclick="toggleMenu()">Other Platforms</a></li>
+                        <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
+        <section id="profile">
+            <div class="section_pic_container">
+                <img src="./assets/profile.png" alt="Bhavesh Chainani Profile Picture" class="profile_pic"/>
+            </div>
+            <div class="section_text">
+                <p class="section_text_p1">Hello, I'm</p>
+                <h1 class="title_1">Bhavesh Chainani</h1>
+                <p class="section_text_p2">Data Scientist</p>
+                <div class="btn_container">
+                    <button class="btn_color" onclick="location.href='./#contact'">
+                        Contact Info
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section id="about">
+            <p class="section_text_p1">Get To Know More</p>
+            <h1 class="title_2">About Bhavesh Chainani</h1>
+            <div class="text_container">
+                <p>Detail-oriented and results driven Data Scientist, with 3+ years of professional experience in data science and analytics.</p>
+                <p>Actively seeking a full-time role which allows me to apply in-depth analysis to real-world data, delivering crystal-clear visibility and insights to multiple stakeholders.</p>
+            </div>
+        </section>
+        <section id="proficiencies">
+            <p class="section_text_p1">Here Are My</p>
+            <h1 class="title_2">Proficiencies</h1>
+            <div class="text_container">
+                <p>Data Science, Data Engineering, Machine Learning</p>
+            </div>
+            <div class="article_container">
+                <article>
+                    <img src="./assets/data-analysis.png" alt="Data Analysis Icon" class="icon"/>
+                    <div>
+                        <h3>Data Analysis</h3>
+                        <p>Uncover hidden insights and patterns within your data to identify trends, anomalies and opportunities for data-driven decision-making.</p>
+                    </div>
+                </article>
+                <article>
+                    <img src="./assets/data-analytics.png" alt="Data Analytics Icon" class="icon"/>
+                    <div>
+                        <h3>Data Analytics</h3>
+                        <p>Harness the power of advanced analytics, including predictive models and machine learning solutions to forecast outcomes, optimize processes and gain a competitive edge.</p>
+                    </div>
+                </article>
+                <article>
+                    <img src="./assets/data-visualization.png" alt="Data Visualization Icon" class="icon"/>
+                    <div>
+                        <h3>Data Visualization</h3>
+                        <p>Transform complex data into clear and compelling visual narratives. Create custom dashboards and reports for enhanced data communication and understanding.</p>
+                    </div>
+                </article>
+                <article>
+                    <img src="./assets/technical-writing.png" alt="Technical Writing Icon" class="icon"/>
+                    <div>
+                        <h3>Technical Writing</h3>
+                        <p>Translate intricate technical concepts into clear and concise documentation. From reports to comprehensive materials, I ensure your data projects are well-documented and readily accessible.</p>
+                    </div>
+                </article>
+                <article>
+                    <img src="./assets/front-end-web-development.png" alt="Front End Web Development Icon" class="icon"/>
+                    <div>
+                        <h3>Web Development</h3>
+                        <p>Craft intuitive web interfaces that deliver information in an accessible format. Design and build data-driven web solutions, seamlessly blending functionality and aesthetics to present data solutions that engage and inform.</p>
+                    </div>
+                </article>
+                <article>
+                    <img src="./assets/collaboration.png" alt="Collaboration Icon" class="icon"/>
+                    <div>
+                        <h3>Collaboration</h3>
+                        <p>Collaborate seamlessly with your team to integrate data solutions into your business processes. Whether it's short-term projects or ongoing data-driven initiatives, I'm here to support your success.</p>
+                    </div>
+                </article>
+            </div>
+        </section>
         <section id="projects">
-            <h2>Projects</h2>
-            <div id="projects-list"></div>
+            <p class="section_text_p1">Browse Through My</p>
+            <h1 class="title_2">Projects</h1>
+            <div class="details_container">
+                <div class="details_container color_container">
+                    <div class="subdetail_container">
+                        <img src="./assets/cyclistic.png" class="project_img"/>
+                        <h2 class="projects_subtitle">Cyclistic Bike-Share Analytics</h2>
+                        <p>A comprehensive analysis of Cyclistic Bike-Share program, featuring Exploratory Data Analysis (EDA), A/B Testing, SARIMA Time Series Forecasting and interactive Tableau dashboards to uncover user behavior, trends and marketing strategies for growth.</p> 
+                        <div class="btn_container">
+                            <button class="btn btn_color project_btn"
+                            onclick="location.href='https://medium.com/python-in-plain-english/revitalizing-cyclistic-bike-share-program-an-in-depth-data-exploration-556b52512bf8'">View Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>      
         </section>
-        <section id="resume">
-            <h2>Resume</h2>
-            <div id="resume-content"></div>
+        <section id="other-platforms">
+            <p class="section_text_p1">Explore My</p>
+            <h1 class="title_2">Other Platforms</h1>
+            <div class="details_container">
+                <div class="details_container color_container">
+                    <div class="sub-detail_container">
+                        <a href="https://github.com/bhavesh-chainani" class="platform-link">
+                            <img src="./assets/github.jpg" class="project_img" />
+                            <h2 class="projects_subtitle">Github</h2>
+                            <p>All things code</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>        
+        <section id="contact">
+            <h1 class="title_2">Contact Me</h1>
+            <div class="contact-container">
+                <div class="contact-card">
+                    <form class="contact-form">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" placeholder="Enter your full name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" placeholder="Enter your email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" rows="5" required></textarea>
+                        </div>
+                        <button class="submit-button" onclick="sendMail()">Send Message</button>
+                    </form>
+                </div>
+                <div class="contact-info">
+                    <h2>Contact Information</h2>
+                    <div class="info-item">
+                        <i class="fas fa-user"></i>
+                        <p>Bhavesh Chainani</p>
+                    </div>
+                    <div class="info-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p>Singapore</p>
+                    </div>
+                    <div class="info-item">
+                        <i class="fas fa-envelope"></i>
+                        <a href="mailto:bhaveshchainani@gmail.com">bhaveshchainani@gmail.com</a>
+                    </div>
+                    <div class="info-item">
+                        <a href="https://www.linkedin.com/in/bhaveshchainani" target="_blank">
+                            <img src="./assets/linkedin.png" alt="LinkedIn Icon" class="icon contact-icon" />
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
+        <footer>
+            <p>Copyright &#169; 2024 Bhavesh Chainani. All Rights Reserved.</p>
+        </footer>
     </main>
-    <script src="scripts.js"></script>
+   <script src="script.js"></script>
 </body>
 </html>
