Updated contact button.

--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
                 <h1 class="title_1">Bhavesh Chainani</h1>
                 <p class="section_text_p2">Data Scientist</p>
                 <div class="btn_container">
-                    <button class="btn_color" onclick="location.href='./#contact'">
-                        Contact Info
-                    </button>
+                    <a href="#contact" class="btn_color">Contact Info</a>
                 </div>
             </div>
         </section>
