--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
             <div class="details_container">
                 <div class="details_container color_container">
                     <div class="subdetail_container">
-                        <img src="./assets/cyclistic.png" class="project_img"/>
-                        <h2 class="projects_subtitle">Cyclistic Bike-Share Analytics</h2>
-                        <p>A comprehensive analysis of Cyclistic Bike-Share program, featuring Exploratory Data Analysis (EDA), A/B Testing, SARIMA Time Series Forecasting and interactive Tableau dashboards to uncover user behavior, trends and marketing strategies for growth.</p> 
+                        <img src="./assets/topic-modelling.png" class="project_img"/>
+                        <h2 class="projects_subtitle">Topic Modelling</h2>
+                        <p>A comprehensive analysis topic modelling for English, Russian and Italian using Latent Dirichlet Allocation.</p> 
                         <div class="btn_container">
                             <button class="btn btn_color project_btn"
-                            onclick="location.href='https://medium.com/python-in-plain-english/revitalizing-cyclistic-bike-share-program-an-in-depth-data-exploration-556b52512bf8'">View Project</button>
+                            onclick="location.href='https://github.com/bhavesh-chainani/topic_modelling'">View Project</button>
                         </div>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                 <div class="details_container color_container">
                     <div class="sub-detail_container">
                         <a href="https://github.com/bhavesh-chainani" class="platform-link">
-                            <img src="./assets/github.jpg" class="project_img" />
+                            <img src="./assets/github.png" class="project_img" />
                             <h2 class="projects_subtitle">Github</h2>
                             <p>All things code</p>
                         </a>
