Updated topic modelling analysis.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="subdetail_container">
                         <img src="./assets/topic-modelling.png" class="project_img"/>
                         <h2 class="projects_subtitle">Topic Modelling</h2>
-                        <p>A comprehensive analysis topic modelling for English, Russian and Italian using Latent Dirichlet Allocation.</p> 
+                        <p>A comprehensive topic modeling analysis for English, Russian, and Italian texts using Latent Dirichlet Allocation (LDA). This project involves preprocessing multilingual datasets, implementing LDA to uncover hidden topics, and analyzing the results to provide insights into the prevalent themes across different languages.</p> 
                         <div class="btn_container">
                             <button class="btn btn_color project_btn"
                             onclick="location.href='https://github.com/bhavesh-chainani/topic_modelling'">View Project</button>
