--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <article>
                     <img src="./assets/data-analytics.png" alt="Data Analytics Icon" class="icon"/>
                     <div>
-                        <h3>Data Analytics</h3>
+                        <h3>Data Science</h3>
                         <p>Harness the power of advanced analytics, including predictive models and machine learning solutions to forecast outcomes, optimize processes and gain a competitive edge.</p>
                     </div>
                 </article>
