Updated contact info.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bhavesh Chainani | Data Scientist | MS Computer Science</title>
+        <title>Bhavesh Chainani</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="mediaqueries.css">
         <link rel="icon" href="./assets/bhav-logo.png" type="image/x-icon">
@@ -80,7 +80,7 @@
             <p class="section_text_p1">Here Are My</p>
             <h1 class="title_2">Proficiencies</h1>
             <div class="text_container">
-                <p>Data Science, Data Engineering, Machine Learning</p>
+                <p>Proficient in full-stack data science, from data engineering to model deployment.</p>
             </div>
             <div class="article_container">
                 <article>
@@ -161,43 +161,15 @@
         </section>        
         <section id="contact">
             <h1 class="title_2">Contact Me</h1>
-            <div class="contact-container">
-                <div class="contact-card">
-                    <form class="contact-form">
-                        <div class="form-group">
-                            <label for="name">Name</label>
-                            <input type="text" id="name" placeholder="Enter your full name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" placeholder="Enter your email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Message</label>
-                            <textarea id="message" name="message" rows="5" required></textarea>
-                        </div>
-                        <button class="submit-button" onclick="sendMail()">Send Message</button>
-                    </form>
+            <div class="contact-info">
+                <div class="info-item">
+                    <i class="fas fa-envelope"></i>
+                    <a href="mailto:bhaveshchainani@gmail.com">bhaveshchainani@gmail.com</a>
                 </div>
-                <div class="contact-info">
-                    <h2>Contact Information</h2>
-                    <div class="info-item">
-                        <i class="fas fa-user"></i>
-                        <p>Bhavesh Chainani</p>
-                    </div>
-                    <div class="info-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <p>Singapore</p>
-                    </div>
-                    <div class="info-item">
-                        <i class="fas fa-envelope"></i>
-                        <a href="mailto:bhaveshchainani@gmail.com">bhaveshchainani@gmail.com</a>
-                    </div>
-                    <div class="info-item">
-                        <a href="https://www.linkedin.com/in/bhaveshchainani" target="_blank">
-                            <img src="./assets/linkedin.png" alt="LinkedIn Icon" class="icon contact-icon" />
-                        </a>
-                    </div>
+                <div class="info-item">
+                    <a href="https://www.linkedin.com/in/bhaveshchainani" target="_blank">
+                        <img src="./assets/linkedin.png" alt="LinkedIn Icon" class="icon contact-icon" />
+                    </a>
                 </div>
             </div>
         </section>
