Updated website email address.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="contact-info">
                 <div class="info-item">
                     <i class="fas fa-envelope"></i>
-                    <a href="mailto:bhaveshchainani@gmail.com">bhaveshchainani@gmail.com</a>
+                    <a href="mailto:hello@bhaveshc.com">hello@bhaveshc.com</a>
                 </div>
                 <div class="info-item">
                     <a href="https://www.linkedin.com/in/bhaveshchainani" target="_blank">
