--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="section_text">
                 <p class="section_text_p1">Hello, I'm</p>
                 <h1 class="title_1">Bhavesh Chainani</h1>
-                <p class="section_text_p2">Data Scientist</p>
+                <p class="section_text_p2">Data Scientist | Data Engineer</p>
                 <div class="btn_container">
                     <a href="#contact" class="btn_color">Contact Info</a>
                 </div>
@@ -72,7 +72,7 @@
             <p class="section_text_p1">Get To Know More</p>
             <h1 class="title_2">About Bhavesh Chainani</h1>
             <div class="text_container">
-                <p>Detail-oriented and results driven Data Scientist, with 3+ years of professional experience in data science and analytics.</p>
+                <p>Detail-oriented and results driven full-stack Data Scientist, with 3+ years of professional experience in data science and engineering.</p>
                 <p>Actively seeking a full-time role which allows me to apply in-depth analysis to real-world data, delivering crystal-clear visibility and insights to multiple stakeholders.</p>
             </div>
         </section>
@@ -87,44 +87,44 @@
                     <img src="./assets/data-analysis.png" alt="Data Analysis Icon" class="icon"/>
                     <div>
                         <h3>Data Analysis</h3>
-                        <p>Uncover hidden insights and patterns within your data to identify trends, anomalies and opportunities for data-driven decision-making.</p>
+                        <p>Dive deep into your data to identify trends, detect anomalies, and uncover insights that drive informed decision-making.</p>
                     </div>
                 </article>
                 <article>
                     <img src="./assets/data-analytics.png" alt="Data Analytics Icon" class="icon"/>
                     <div>
                         <h3>Data Science</h3>
-                        <p>Harness the power of advanced analytics, including predictive models and machine learning solutions to forecast outcomes, optimize processes and gain a competitive edge.</p>
+                        <p>Utilize advanced analytics and machine learning to predict outcomes, enhance processes, and gain a competitive edge.</p>
                     </div>
                 </article>
                 <article>
                     <img src="./assets/data-visualization.png" alt="Data Visualization Icon" class="icon"/>
                     <div>
                         <h3>Data Visualization</h3>
-                        <p>Transform complex data into clear and compelling visual narratives. Create custom dashboards and reports for enhanced data communication and understanding.</p>
+                        <p>Convert complex data into clear visuals and interactive dashboards for better understanding and communication.</p>
                     </div>
                 </article>
                 <article>
                     <img src="./assets/technical-writing.png" alt="Technical Writing Icon" class="icon"/>
                     <div>
                         <h3>Technical Writing</h3>
-                        <p>Translate intricate technical concepts into clear and concise documentation. From reports to comprehensive materials, I ensure your data projects are well-documented and readily accessible.</p>
+                        <p>Create clear and concise documentation to ensure your technical concepts and data projects are well understood and accessible.</p>
                     </div>
                 </article>
                 <article>
                     <img src="./assets/front-end-web-development.png" alt="Front End Web Development Icon" class="icon"/>
                     <div>
                         <h3>Web Development</h3>
-                        <p>Craft intuitive web interfaces that deliver information in an accessible format. Design and build data-driven web solutions, seamlessly blending functionality and aesthetics to present data solutions that engage and inform.</p>
+                        <p>Design and build intuitive web interfaces that present your data solutions effectively, balancing functionality and aesthetics.</p>
                     </div>
                 </article>
                 <article>
                     <img src="./assets/collaboration.png" alt="Collaboration Icon" class="icon"/>
                     <div>
                         <h3>Collaboration</h3>
-                        <p>Collaborate seamlessly with your team to integrate data solutions into your business processes. Whether it's short-term projects or ongoing data-driven initiatives, I'm here to support your success.</p>
+                        <p>Work closely with your team to integrate data solutions into your business processes, supporting both short-term projects and long-term initiatives.</p>
                     </div>
-                </article>
+                </article>                
             </div>
         </section>
         <section id="projects">
