--- a/index.html
+++ b/index.html
@@ -79,8 +79,21 @@
         <section id="proficiencies">
             <p class="section_text_p1">Here Are My</p>
             <h1 class="title_2">Proficiencies</h1>
-            <div class="text_container">
-                <p>Proficient in full-stack data science, from data engineering to model deployment.</p>
+            <div class="text_container_skillsets">
+                <ul>
+                    <li><b>Python</b> (PyTorch, Keras, TensorFlow, Scikit-Learn, Django, Flask, PySpark)</li>
+                    <li><b>MLOps</b> (MLFlow, DataRobot)</li>
+                    <li><b>AWS</b> (S3, Athena, Glue, SageMaker, Quicksight, Redshift, MWAA, Lambda, API Gateway)</li>
+                    <li><b>SQL</b> (MySQL, PostgreSQL, Hive, ElasticSearch, Teradata, Hadoop)</li>
+                    <li><b>Data Visualisation</b> (Tableau, Power BI)</li>
+                    <li><b>Docker</b></li>
+                    <li><b>Kubernetes</b></li>
+                    <li><b>Java</b></li>
+                    <li><b>JavaScript</b> (ReactJS, NodeJS, NextJS)</li>
+                    <li><b>Rest API</b></li>
+                    <li><b>R / R Studio</b></li>
+                    <li><b>MATLab</b></li>
+                </ul>
             </div>
             <div class="article_container">
                 <article>
