--- a/index.html
+++ b/index.html
@@ -100,44 +100,44 @@
                     <img src="./assets/data-analysis.png" alt="Data Analysis Icon" class="icon"/>
                     <div>
                         <h3>Data Analysis</h3>
-                        <p>Dive deep into your data to identify trends, detect anomalies, and uncover insights that drive informed decision-making.</p>
+                        <p>Expert in diving deep into data to uncover trends, detect anomalies, and generate actionable insights that drive strategic decisions.</p>
                     </div>
                 </article>
                 <article>
                     <img src="./assets/data-analytics.png" alt="Data Analytics Icon" class="icon"/>
                     <div>
                         <h3>Data Science</h3>
-                        <p>Utilize advanced analytics and machine learning to predict outcomes, enhance processes, and gain a competitive edge.</p>
+                        <p>Skilled in leveraging advanced analytics and machine learning to predict outcomes, optimize processes, and gain a competitive edge.</p>
                     </div>
                 </article>
                 <article>
                     <img src="./assets/data-visualization.png" alt="Data Visualization Icon" class="icon"/>
                     <div>
                         <h3>Data Visualization</h3>
-                        <p>Convert complex data into clear visuals and interactive dashboards for better understanding and communication.</p>
+                        <p>Proficient in transforming complex data into clear, interactive visuals and dashboards for enhanced understanding and effective communication.</p>
                     </div>
                 </article>
                 <article>
                     <img src="./assets/technical-writing.png" alt="Technical Writing Icon" class="icon"/>
                     <div>
                         <h3>Technical Writing</h3>
-                        <p>Create clear and concise documentation to ensure your technical concepts and data projects are well understood and accessible.</p>
+                        <p>Experienced in creating clear and precise documentation to ensure technical concepts and data projects are comprehensively understood.</p>
                     </div>
                 </article>
                 <article>
                     <img src="./assets/front-end-web-development.png" alt="Front End Web Development Icon" class="icon"/>
                     <div>
                         <h3>Web Development</h3>
-                        <p>Design and build intuitive web interfaces that present your data solutions effectively, balancing functionality and aesthetics.</p>
+                        <p>Skilled in designing and building intuitive web interfaces that effectively present data solutions, balancing functionality and aesthetics.</p>
                     </div>
                 </article>
                 <article>
                     <img src="./assets/collaboration.png" alt="Collaboration Icon" class="icon"/>
                     <div>
                         <h3>Collaboration</h3>
-                        <p>Work closely with your team to integrate data solutions into your business processes, supporting both short-term projects and long-term initiatives.</p>
+                        <p>Adept at working with teams to integrate data solutions into business processes, supporting both short-term projects and long-term goals.</p>
                     </div>
-                </article>                
+                </article>
             </div>
         </section>
         <section id="projects">
