Updated SQL skillsets.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <li><b>Python</b> (PyTorch, Keras, TensorFlow, Scikit-Learn, Django, Flask, PySpark)</li>
                     <li><b>MLOps</b> (MLFlow, DataRobot)</li>
                     <li><b>AWS</b> (S3, Athena, Glue, SageMaker, Quicksight, Redshift, MWAA, Lambda, API Gateway)</li>
-                    <li><b>SQL</b> (MySQL, PostgreSQL, Hive, ElasticSearch, Teradata, Hadoop)</li>
+                    <li><b>SQL</b> (MySQL, PostgreSQL, Hive, ElasticSearch, Teradata, Hadoop, MongoDB)</li>
                     <li><b>Data Visualisation</b> (Tableau, Power BI)</li>
                     <li><b>Docker</b></li>
                     <li><b>Kubernetes</b></li>
