--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
             <p class="section_text_p1">Get To Know More</p>
             <h1 class="title_2">About Bhavesh Chainani</h1>
             <div class="text_container">
-                <p>Detail-oriented and results driven full-stack Data Scientist, with 3+ years of professional experience in data science and engineering.</p>
-                <p>Actively seeking a full-time role which allows me to apply in-depth analysis to real-world data, delivering crystal-clear visibility and insights to multiple stakeholders.</p>
+                <p>Detail-oriented and results driven full-stack Data Scientist, with 3+ years of professional experience in data science and engineering. Actively seeking a full-time role which allows me to apply in-depth analysis to real-world data, delivering crystal-clear visibility and insights to multiple stakeholders.</p>
             </div>
         </section>
         <section id="proficiencies">
