--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
             <div class="details_container">
                 <div class="details_container color_container">
                     <div class="subdetail_container">
+                        <img src="./assets/langchain_photo.png" class="project_img"/>
+                        <h2 class="projects_subtitle">LangChain Analysis</h2>
+                        <p>This project demonstrates the use of LangChain to develop and implement language models for various tasks such as text generation, summarization, and chatbots. A practical example includes creating a sample restaurant menu where LangChain interacts with user queries based on cuisine preferences, generating relevant menu items to showcase its capabilities in understanding and responding to user needs.</p> 
+                        <div class="btn_container">
+                            <button class="btn btn_color project_btn"
+                            onclick="location.href='https://github.com/bhavesh-chainani/topic_modelling'">View Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>      
+            <div class="details_container">
+                <div class="details_container color_container">
+                    <div class="subdetail_container">
                         <img src="./assets/topic-modelling.png" class="project_img"/>
                         <h2 class="projects_subtitle">Topic Modelling</h2>
                         <p>A comprehensive topic modeling analysis for English, Russian, and Italian texts using Latent Dirichlet Allocation (LDA). This project involves preprocessing multilingual datasets, implementing LDA to uncover hidden topics, and analyzing the results to provide insights into the prevalent themes across different languages.</p> 
