Updated headline to product owner.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="section_text">
                 <p class="section_text_p1">Hello, I'm</p>
                 <h1 class="title_1">Bhavesh Chainani</h1>
-                <p class="section_text_p2">Data Scientist | Data Engineer</p>
+                <p class="section_text_p2">Data Scientist | Data Engineer | Aspiring Product Owner</p>
                 <div class="btn_container">
                     <a href="#contact" class="btn_color">Contact Info</a>
                 </div>
