--- a/index.html
+++ b/index.html
@@ -59,10 +59,15 @@
             <div class="section_pic_container">
                 <img src="./assets/profile.png" alt="Bhavesh Chainani Profile Picture" class="profile_pic"/>
             </div>
+
             <div class="section_text">
                 <p class="section_text_p1">Hello, I'm</p>
                 <h1 class="title_1">Bhavesh Chainani</h1>
-                <p class="section_text_p2">Data Scientist | Data Engineer | Aspiring Product Owner</p>
+                <p class="section_text_p2">
+                    <span class="nowrap">Data Scientist</span> | 
+                    <span class="nowrap">Data Engineer</span> | 
+                    <span class="nowrap">Aspiring Product Owner</span>
+                </p>
                 <div class="btn_container">
                     <a href="#contact" class="btn_color">Contact Info</a>
                 </div>
@@ -199,7 +204,7 @@
             </div>
         </section>
         <footer>
-            <p>Copyright &#169; 2024 Bhavesh Chainani. All Rights Reserved.</p>
+            <p>Copyright &#169; 2025 Bhavesh Chainani. All Rights Reserved.</p>
         </footer>
     </main>
    <script src="script.js"></script>
