--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
             <p class="section_text_p1">Get To Know More</p>
             <h1 class="title_2">About Bhavesh Chainani</h1>
             <div class="text_container">
-                <p>Detail-oriented and results driven full-stack Data Scientist, with 4+ years of professional experience in data science and engineering. Actively seeking a full-time role which allows me to apply in-depth analysis to real-world data, delivering crystal-clear visibility and insights to multiple stakeholders.</p>
+                <p>Data Scientist with 4+ years of professional experience in data science and analytics, adept at leveraging advanced analytical
+                    techniques and state-of-the-art technologies to drive business growth and enhance operational efficiency. Skilled in translating
+                    complex data into actionable insights for multiple stakeholders and leading end-to-end projects that deliver impactful solutions.</p>
             </div>
         </section>
         <section id="proficiencies">
