Updated section text.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h1 class="title_1">Bhavesh Chainani</h1>
                 <p class="section_text_p2">
                     <span class="nowrap">Data Scientist</span> | 
-                    <span class="nowrap">Aspiring Product Owner</span>
+                    <span class="nowrap">Aspiring Tech Consultant</span>
                 </p>
                 <div class="btn_container">
                     <a href="#contact" class="btn_color">Contact Info</a>
