--- a/index.html
+++ b/index.html
@@ -174,7 +174,21 @@
                     </div>
                 </div>
             </div>      
+            <div class="details_container">
+                <div class="details_container color_container">
+                    <div class="subdetail_container">
+                        <img src="./assets/data_science_portfolio.png" class="project_img"/>
+                        <h2 class="projects_subtitle">Personal Portfolio</h2>
+                        <p>This project demonstrates the development of my personal portfolio, showcasing professional experiences, projects, and achievements. The design draws inspiration from the work of data scientist Lanre Akinbo, who has generously open-sourced his code.</p>
+                        <div class="btn_container">
+                            <button class="btn btn_color project_btn"
+                            onclick="location.href='https://github.com/bhavesh-chainani/personal-website'">View Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div> 
         </section>
+        
         <section id="other-platforms">
             <p class="section_text_p1">Explore My</p>
             <h1 class="title_2">Other Platforms</h1>
