--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <div class="sub-detail_container">
                         <a href="https://github.com/bhavesh-chainani" class="platform-link">
                             <img src="./assets/github.png" class="project_img" />
-                            <h2 class="projects_subtitle">Github</h2>
+                            <!-- <h2 class="projects_subtitle">Github</h2> -->
                             <p>All things code</p>
                         </a>
                     </div>
