--- a/index.html
+++ b/index.html
@@ -144,37 +144,52 @@
                     </div>
                 </article>
             </div>
-        </section>
         <section id="projects">
             <p class="section_text_p1">Browse Through My</p>
             <h1 class="title_2">Projects</h1>
+
             <div class="details_container">
-                <div class="details_container color_container">
-                    <div class="subdetail_container">
-                        <img src="./assets/langchain_photo.png" class="project_img"/>
-                        <h2 class="projects_subtitle">LangChain Analysis</h2>
-                        <p>This project demonstrates the use of LangChain to develop and implement language models for various tasks such as text generation, summarization, and chatbots. A practical example includes creating a sample restaurant menu where LangChain interacts with user queries based on cuisine preferences, generating relevant menu items to showcase its capabilities in understanding and responding to user needs.</p> 
-                        <div class="btn_container">
-                            <button class="btn btn_color project_btn"
+                <!-- Realtime Data Streaming -->
+                <div class="color_container subdetail_container">
+                    <img src="./assets/data-streaming-architecture.png" class="project_img" />
+                    <h2 class="projects_subtitle">Realtime Data Streaming</h2>
+                    <p>
+                        This project showcases an end-to-end real-time data streaming pipeline using technologies like Apache Airflow, Kafka, Spark, and Cassandra. Synthetic user data is fetched from the randomuser.me API, orchestrated via Airflow, streamed through Kafka, processed with Spark, and stored in Cassandra—all containerized with Docker for seamless deployment.
+                    </p>
+                    <div class="btn_container">
+                        <button class="btn btn_color project_btn"
+                            onclick="location.href='https://github.com/bhavesh-chainani/realtime-data-streaming'">View Project</button>
+                    </div>
+                </div>
+
+                <!-- LangChain Analysis -->
+                <div class="color_container subdetail_container">
+                    <img src="./assets/langchain_photo.png" class="project_img" />
+                    <h2 class="projects_subtitle">LangChain Analysis</h2>
+                    <p>
+                        This project demonstrates the use of LangChain to develop and implement language models for various tasks such as text generation, summarization, and chatbots. A practical example includes creating a sample restaurant menu where LangChain interacts with user queries based on cuisine preferences, generating relevant menu items to showcase its capabilities in understanding and responding to user needs.
+                    </p>
+                    <div class="btn_container">
+                        <button class="btn btn_color project_btn"
                             onclick="location.href='https://github.com/bhavesh-chainani/langchain_analysis'">View Project</button>
-                        </div>
                     </div>
                 </div>
-            </div>      
-            <div class="details_container">
-                <div class="details_container color_container">
-                    <div class="subdetail_container">
-                        <img src="./assets/topic-modelling.png" class="project_img"/>
-                        <h2 class="projects_subtitle">Topic Modelling</h2>
-                        <p>A comprehensive topic modeling analysis for English, Russian, and Italian texts using Latent Dirichlet Allocation (LDA). This project involves preprocessing multilingual datasets, implementing LDA to uncover hidden topics, and analyzing the results to provide insights into the prevalent themes across different languages.</p> 
-                        <div class="btn_container">
-                            <button class="btn btn_color project_btn"
+
+                <!-- Topic Modelling -->
+                <div class="color_container subdetail_container">
+                    <img src="./assets/topic-modelling.png" class="project_img" />
+                    <h2 class="projects_subtitle">Topic Modelling</h2>
+                    <p>
+                        A comprehensive topic modeling analysis for English, Russian, and Italian texts using Latent Dirichlet Allocation (LDA). This project involves preprocessing multilingual datasets, implementing LDA to uncover hidden topics, and analyzing the results to provide insights into the prevalent themes across different languages.
+                    </p>
+                    <div class="btn_container">
+                        <button class="btn btn_color project_btn"
                             onclick="location.href='https://github.com/bhavesh-chainani/topic_modelling'">View Project</button>
-                        </div>
                     </div>
                 </div>
-            </div>      
+            </div>
         </section>
+
         <section id="other-platforms">
             <p class="section_text_p1">Explore My</p>
             <h1 class="title_2">Other Platforms</h1>
